core/gen/MetricExpressionParser.java
// Generated from /Users/chiruvol/Desktop/Desktop/TechOtros/codebases/new_yamas/opentsdb/core/src/main/antlr4/MetricExpression.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MetricExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, TRUE=19, FALSE=20, REX=21, QUOTE=22, NUM=23, WS=24, BACKSLASH=25, 
		A=26, N=27, D=28, O=29, R=30, T=31;
	public static final int
		RULE_prog = 0, RULE_expression = 1, RULE_logicalExpression = 2, RULE_logicalOperands = 3, 
		RULE_arthmeticExpression = 4, RULE_arithmeticOperands = 5, RULE_relationalExpression = 6, 
		RULE_relationalOperands = 7, RULE_logicop = 8, RULE_relationalop = 9, 
		RULE_ternaryExpression = 10, RULE_ternaryOperands = 11, RULE_and = 12, 
		RULE_or = 13, RULE_not = 14, RULE_modulo = 15, RULE_metric = 16;
	public static final String[] ruleNames = {
		"prog", "expression", "logicalExpression", "logicalOperands", "arthmeticExpression", 
		"arithmeticOperands", "relationalExpression", "relationalOperands", "logicop", 
		"relationalop", "ternaryExpression", "ternaryOperands", "and", "or", "not", 
		"modulo", "metric"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'('", "')'", "'%'", "'/'", "'*'", "'-'", "'+'", "'<'", "'>'", "'=='", 
		"'<='", "'>='", "'!='", "'?'", "':'", "'&&'", "'||'", "'!'", null, null, 
		null, "'(\"|')'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "TRUE", "FALSE", "REX", "QUOTE", 
		"NUM", "WS", "BACKSLASH", "A", "N", "D", "O", "R", "T"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MetricExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MetricExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArithmeticContext extends ExpressionContext {
		public ArthmeticExpressionContext arthmeticExpression() {
			return getRuleContext(ArthmeticExpressionContext.class,0);
		}
		public ArithmeticContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterArithmetic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitArithmetic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RelationalContext extends ExpressionContext {
		public RelationalExpressionContext relationalExpression() {
			return getRuleContext(RelationalExpressionContext.class,0);
		}
		public RelationalContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterRelational(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitRelational(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitRelational(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TernaryContext extends ExpressionContext {
		public TernaryExpressionContext ternaryExpression() {
			return getRuleContext(TernaryExpressionContext.class,0);
		}
		public TernaryContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterTernary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitTernary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitTernary(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogicalContext extends ExpressionContext {
		public LogicalExpressionContext logicalExpression() {
			return getRuleContext(LogicalExpressionContext.class,0);
		}
		public LogicalContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterLogical(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitLogical(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitLogical(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new ArithmeticContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				arthmeticExpression(0);
				}
				break;
			case 2:
				_localctx = new LogicalContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				logicalExpression(0);
				}
				break;
			case 3:
				_localctx = new RelationalContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(38);
				relationalExpression();
				}
				break;
			case 4:
				_localctx = new TernaryContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(39);
				ternaryExpression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalExpressionContext extends ParserRuleContext {
		public LogicalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalExpression; }
	 
		public LogicalExpressionContext() { }
		public void copyFrom(LogicalExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Paren_logical_ruleContext extends LogicalExpressionContext {
		public LogicalExpressionContext logicalExpression() {
			return getRuleContext(LogicalExpressionContext.class,0);
		}
		public Paren_logical_ruleContext(LogicalExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterParen_logical_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitParen_logical_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitParen_logical_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Logical_operands_ruleContext extends LogicalExpressionContext {
		public LogicalOperandsContext logicalOperands() {
			return getRuleContext(LogicalOperandsContext.class,0);
		}
		public Logical_operands_ruleContext(LogicalExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterLogical_operands_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitLogical_operands_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitLogical_operands_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Logical_expr_and_ruleContext extends LogicalExpressionContext {
		public List<LogicalExpressionContext> logicalExpression() {
			return getRuleContexts(LogicalExpressionContext.class);
		}
		public LogicalExpressionContext logicalExpression(int i) {
			return getRuleContext(LogicalExpressionContext.class,i);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public Logical_expr_and_ruleContext(LogicalExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterLogical_expr_and_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitLogical_expr_and_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitLogical_expr_and_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Logical_expr_or_ruleContext extends LogicalExpressionContext {
		public List<LogicalExpressionContext> logicalExpression() {
			return getRuleContexts(LogicalExpressionContext.class);
		}
		public LogicalExpressionContext logicalExpression(int i) {
			return getRuleContext(LogicalExpressionContext.class,i);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public Logical_expr_or_ruleContext(LogicalExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterLogical_expr_or_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitLogical_expr_or_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitLogical_expr_or_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Logical_expr_not_ruleContext extends LogicalExpressionContext {
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public LogicalExpressionContext logicalExpression() {
			return getRuleContext(LogicalExpressionContext.class,0);
		}
		public Logical_expr_not_ruleContext(LogicalExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterLogical_expr_not_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitLogical_expr_not_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitLogical_expr_not_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalExpressionContext logicalExpression() throws RecognitionException {
		return logicalExpression(0);
	}

	private LogicalExpressionContext logicalExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LogicalExpressionContext _localctx = new LogicalExpressionContext(_ctx, _parentState);
		LogicalExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_logicalExpression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				_localctx = new Paren_logical_ruleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(43);
				match(T__0);
				setState(44);
				logicalExpression(0);
				setState(45);
				match(T__1);
				}
				break;
			case 2:
				{
				_localctx = new Logical_expr_not_ruleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(47);
				not();
				setState(48);
				logicalExpression(4);
				}
				break;
			case 3:
				{
				_localctx = new Logical_operands_ruleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(50);
				logicalOperands();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(63);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(61);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new Logical_expr_and_ruleContext(new LogicalExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicalExpression);
						setState(53);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(54);
						and();
						setState(55);
						logicalExpression(4);
						}
						break;
					case 2:
						{
						_localctx = new Logical_expr_or_ruleContext(new LogicalExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicalExpression);
						setState(57);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(58);
						or();
						setState(59);
						logicalExpression(3);
						}
						break;
					}
					} 
				}
				setState(65);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LogicalOperandsContext extends ParserRuleContext {
		public RelationalExpressionContext relationalExpression() {
			return getRuleContext(RelationalExpressionContext.class,0);
		}
		public TerminalNode TRUE() { return getToken(MetricExpressionParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(MetricExpressionParser.FALSE, 0); }
		public LogicalOperandsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalOperands; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterLogicalOperands(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitLogicalOperands(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitLogicalOperands(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalOperandsContext logicalOperands() throws RecognitionException {
		LogicalOperandsContext _localctx = new LogicalOperandsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logicalOperands);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				relationalExpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				match(TRUE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				match(FALSE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArthmeticExpressionContext extends ParserRuleContext {
		public ArthmeticExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arthmeticExpression; }
	 
		public ArthmeticExpressionContext() { }
		public void copyFrom(ArthmeticExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Arith_operands_ruleContext extends ArthmeticExpressionContext {
		public ArithmeticOperandsContext arithmeticOperands() {
			return getRuleContext(ArithmeticOperandsContext.class,0);
		}
		public Arith_operands_ruleContext(ArthmeticExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterArith_operands_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitArith_operands_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitArith_operands_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Paren_arith_ruleContext extends ArthmeticExpressionContext {
		public ArthmeticExpressionContext arthmeticExpression() {
			return getRuleContext(ArthmeticExpressionContext.class,0);
		}
		public Paren_arith_ruleContext(ArthmeticExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterParen_arith_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitParen_arith_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitParen_arith_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Minus_metric_ruleContext extends ArthmeticExpressionContext {
		public MetricContext metric() {
			return getRuleContext(MetricContext.class,0);
		}
		public Minus_metric_ruleContext(ArthmeticExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterMinus_metric_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitMinus_metric_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitMinus_metric_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Mod_arith_ruleContext extends ArthmeticExpressionContext {
		public List<ArthmeticExpressionContext> arthmeticExpression() {
			return getRuleContexts(ArthmeticExpressionContext.class);
		}
		public ArthmeticExpressionContext arthmeticExpression(int i) {
			return getRuleContext(ArthmeticExpressionContext.class,i);
		}
		public Mod_arith_ruleContext(ArthmeticExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterMod_arith_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitMod_arith_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitMod_arith_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Addsub_arith_ruleContext extends ArthmeticExpressionContext {
		public List<ArthmeticExpressionContext> arthmeticExpression() {
			return getRuleContexts(ArthmeticExpressionContext.class);
		}
		public ArthmeticExpressionContext arthmeticExpression(int i) {
			return getRuleContext(ArthmeticExpressionContext.class,i);
		}
		public Addsub_arith_ruleContext(ArthmeticExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterAddsub_arith_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitAddsub_arith_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitAddsub_arith_rule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Divmul_arith_ruleContext extends ArthmeticExpressionContext {
		public List<ArthmeticExpressionContext> arthmeticExpression() {
			return getRuleContexts(ArthmeticExpressionContext.class);
		}
		public ArthmeticExpressionContext arthmeticExpression(int i) {
			return getRuleContext(ArthmeticExpressionContext.class,i);
		}
		public Divmul_arith_ruleContext(ArthmeticExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).enterDivmul_arith_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MetricExpressionListener ) ((MetricExpressionListener)listener).exitDivmul_arith_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MetricExpressionVisitor ) return ((MetricExpressionVisitor<? extends T>)visitor).visitDivmul_arith_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArthmeticExpressionContext arthmeticExpression() throws RecognitionException {
		return arthmeticExpression(0);
	}

	private ArthmeticExpressionContext arthmeticExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArthmeticExpressionContext _localctx = new ArthmeticExpressionContext(_ctx, _parentState);
		ArthmeticExpressionContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_arthmeticExpression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				_localctx = new Paren_arith_ruleContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
